Fix text overflow in visual editor

--- a/timApp/modules/cs/js/editor/math-editor/formula-field.component.scss
+++ b/timApp/modules/cs/js/editor/math-editor/formula-field.component.scss
@@ -20,6 +20,7 @@
         flex-direction: column;
         width: 100%;
         position: relative;
+        overflow: hidden;
 
         .visual-input {
             width: 100%;
